airflow_docker_tutorial/logs/dag_id=dag_pg_opv2/run_id=scheduled__2023-02-10T15:22:00+00:00/task_id=create_table/attempt=1.log
[2023-02-11T15:22:00.739+0000] {taskinstance.py:1083} INFO - Dependencies all met for <TaskInstance: dag_pg_opv2.create_table scheduled__2023-02-10T15:22:00+00:00 [queued]>
[2023-02-11T15:22:00.748+0000] {taskinstance.py:1083} INFO - Dependencies all met for <TaskInstance: dag_pg_opv2.create_table scheduled__2023-02-10T15:22:00+00:00 [queued]>
[2023-02-11T15:22:00.749+0000] {taskinstance.py:1279} INFO - 
--------------------------------------------------------------------------------
[2023-02-11T15:22:00.749+0000] {taskinstance.py:1280} INFO - Starting attempt 1 of 6
[2023-02-11T15:22:00.749+0000] {taskinstance.py:1281} INFO - 
--------------------------------------------------------------------------------
[2023-02-11T15:22:00.760+0000] {taskinstance.py:1300} INFO - Executing <Task(PostgresOperator): create_table> on 2023-02-10 15:22:00+00:00
[2023-02-11T15:22:00.765+0000] {standard_task_runner.py:55} INFO - Started process 1391 to run task
[2023-02-11T15:22:00.768+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'dag_pg_opv2', 'create_table', 'scheduled__2023-02-10T15:22:00+00:00', '--job-id', '85', '--raw', '--subdir', 'DAGS_FOLDER/dag_with_pg_op.py', '--cfg-path', '/tmp/tmpp6qrnuw6']
[2023-02-11T15:22:00.768+0000] {standard_task_runner.py:83} INFO - Job 85: Subtask create_table
[2023-02-11T15:22:00.820+0000] {task_command.py:388} INFO - Running <TaskInstance: dag_pg_opv2.create_table scheduled__2023-02-10T15:22:00+00:00 [running]> on host 227aa417ae8e
[2023-02-11T15:22:00.890+0000] {taskinstance.py:1509} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=naufal
AIRFLOW_CTX_DAG_ID=dag_pg_opv2
AIRFLOW_CTX_TASK_ID=create_table
AIRFLOW_CTX_EXECUTION_DATE=2023-02-10T15:22:00+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=scheduled__2023-02-10T15:22:00+00:00
[2023-02-11T15:22:00.891+0000] {sql.py:254} INFO - Executing: 
            CREATE TABLE IF NOT EXITS dag_runs (
                dt date,
                dag_id character varying,
                primary key (dt,dag_id)
            );
        
[2023-02-11T15:22:00.899+0000] {base.py:73} INFO - Using connection ID 'pg_docker' for task execution.
[2023-02-11T15:22:01.091+0000] {base.py:73} INFO - Using connection ID 'pg_docker' for task execution.
[2023-02-11T15:22:01.093+0000] {sql.py:375} INFO - Running statement: 
            CREATE TABLE IF NOT EXITS dag_runs (
                dt date,
                dag_id character varying,
                primary key (dt,dag_id)
            );
        , parameters: None
[2023-02-11T15:22:01.094+0000] {taskinstance.py:1768} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 266, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "EXITS"
LINE 2:             CREATE TABLE IF NOT EXITS dag_runs (
                                        ^

[2023-02-11T15:22:01.101+0000] {taskinstance.py:1323} INFO - Marking task as UP_FOR_RETRY. dag_id=dag_pg_opv2, task_id=create_table, execution_date=20230210T152200, start_date=20230211T152200, end_date=20230211T152201
[2023-02-11T15:22:01.111+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 85 for task create_table (syntax error at or near "EXITS"
LINE 2:             CREATE TABLE IF NOT EXITS dag_runs (
                                        ^
; 1391)
[2023-02-11T15:22:01.141+0000] {local_task_job.py:208} INFO - Task exited with return code 1
[2023-02-11T15:22:01.159+0000] {taskinstance.py:2578} INFO - 0 downstream tasks scheduled from follow-on schedule check
